core/tests/spec/snapshots/blocks/bullet-list/deeply-nested-list.snap
---
source: core/tests/runner/mod.rs
description: "Parse a deeply nested bullet list\n"
info: "Test 'deeply-nested-list' from: markup\\blocks\\bullet-list.yml"
---
BulletList(
  BulletListEntry(
    EntryHeading(single list entry)
    EntryBody(
      BulletList(
        BulletListEntry(
          EntryHeading(nested list entry)
          EntryBody(
            BulletList(
              BulletListEntry(
                EntryHeading(deeply-nested list entry)
              )
            )
          )
        )
      )
    )
  )
)
---
With input:

- single list entry
  - nested list entry
    - deeply-nested list entry


