core/tests/spec/snapshots/blocks/bullet-list/nested-list.snap
---
source: core/tests/runner/mod.rs
description: "Parse nested bullet list\n"
info: "Test 'nested-list' from: markup\\blocks\\bullet-list.yml"
---
BulletList(
BulletListEntry(
single list entry

BulletList(
BulletListEntry(
nested list entry
)
)
)
)
---
With input:

- single list entry
  - nested list entry


